libs/cgi/test/compile_fail/Jamfile.v2
# These tests should fail to compile
# (currently none)

test-suite compile_fail_test_suite
  :
  ;
